Update dcgm-exporter to 2.1.0-rc.2
Changelog:
1. Build Ubuntu 20.04 images
2. Update dcp-metrics-included.csv to include all profiling fields
3. Update Helm chart - chart now deploys DCP metrics by default and can be configured during Helm install to exclude
4. Reconfigure the default Grafana dashboard

Fix indentation typo in dcgm-exporter.yaml

--- a/deployment/dcgm-exporter/templates/daemonset.yaml
+++ b/deployment/dcgm-exporter/templates/daemonset.yaml
@@ -73,6 +73,10 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
         {{- end }}
         imagePullPolicy: "{{ .Values.image.pullPolicy }}"
+        args: 
+        {{- range $.Values.arguments }} 
+        - {{ . }} 
+        {{- end }}
         env:
         - name: "DCGM_EXPORTER_KUBERNETES"
           value: "true"
