--- a/deployment/dcgm-exporter/values.yaml
+++ b/deployment/dcgm-exporter/values.yaml
@@ -17,7 +17,10 @@ image:
   pullPolicy: IfNotPresent
   # Image tag defaults to AppVersion, but you can use the tag key
   # for the image tag, e.g:
-  #tag: 1.7.2
+  tag: 2.0.10-2.1.0-rc.2-ubuntu18.04
+
+# Comment the following line to stop profiling metrics from DCGM
+arguments: ["-f", "/etc/dcgm-exporter/dcp-metrics-included.csv"]
 
 imagePullSecrets: []
 nameOverride: ""
@@ -38,9 +41,8 @@ podSecurityContext: {}
 securityContext:
   runAsNonRoot: false
   runAsUser: 0
-  # capabilities:
-  #   drop:
-  #   - ALL
+  capabilities:
+     add: ["SYS_ADMIN"]
   # readOnlyRootFilesystem: true
 
 service:
