Move exporter to stable release 2.1.0
Includes the following changes:
1. Update DCGM version to 2.0.13 (includes MIG metrics)
2. Added error handling for setcap in the entrypoint script - this fixes an issue where the setcap command fails in OpenShift, in turn causing a CrashLoopBackoff error for the dcgm-exporter pod
3. Renamed entrypoint script
4. Fixed typo in the DCGM download URL for UBI8
5. Updated Helm chart versioning and metadata
6. Updated documentation

--- a/deployment/dcgm-exporter/Chart.yaml
+++ b/deployment/dcgm-exporter/Chart.yaml
@@ -1,8 +1,17 @@
-apiVersion: v1
+apiVersion: v2
 name: dcgm-exporter
 description: A Helm chart for DCGM exporter
+version: "2.1.0"
+kubeVersion: ">= 1.13.0"
+appVersion: "2.1.0"
 sources:
 - https://gitlab.com/nvidia/container-toolkit/gpu-monitoring-tools
-version: "1.1.0"
-appVersion: "2.0.10"
-kubeVersion: ">= 1.13.0"
+home: https://github.com/nvidia/gpu-monitoring-tools/
+icon: https://assets.nvidiagrid.net/ngc/logos/DCGM.png
+keywords:
+  - gpu
+  - cuda
+  - compute
+  - monitoring
+  - telemetry
+  - tesla
