--- a/docker/Dockerfile.ubi8
+++ b/docker/Dockerfile.ubi8
@@ -11,7 +11,7 @@ LABEL io.k8s.display-name="NVIDIA DCGM Exporter"
 
 ARG DCGM_VERSION
 RUN yum install -y wget libgomp && \
-    wget https://developer.download.nvidia.com/compute/redist/dcgm/${DCGM_VERSION}/RPMS/x86_64/datacenter-gpu-manager-${DCGM_VERSION}-1.x86_64.rpm && \
+    wget --no-check-certificate https://developer.download.nvidia.com/compute/redist/dcgm/${DCGM_VERSION}/RPMS/x86_64/datacenter-gpu-manager-${DCGM_VERSION}-1-x86_64.rpm && \
     rpm -i ./datacenter-gpu-manager-*.rpm && \
     rm ./datacenter-gpu-manager-*.rpm
 
@@ -29,13 +29,13 @@ LABEL name="NVIDIA DCGM Exporter"
 LABEL vendor="NVIDIA"
 LABEL version="${VERSION}"
 LABEL release="N/A"
-LABEL summary="Exports GPU Metrics in the prometheus format"
+LABEL summary="Exports GPU Metrics to Prometheus"
 LABEL description="See summary"
 
 COPY ./LICENSE ./licenses/LICENSE
 
 ENV NO_SETCAP=
-COPY docker/docker-entrypoint.sh /usr/local/dcgm/docker-entrypoint.sh
-RUN chmod +x /usr/local/dcgm/docker-entrypoint.sh
+COPY docker/dcgm-exporter-entrypoint.sh /usr/local/dcgm/dcgm-exporter-entrypoint.sh
+RUN chmod +x /usr/local/dcgm/dcgm-exporter-entrypoint.sh
 
-ENTRYPOINT ["/usr/local/dcgm/docker-entrypoint.sh"]
+ENTRYPOINT ["/usr/local/dcgm/dcgm-exporter-entrypoint.sh"]
