--- a/dcgm-exporter.yaml
+++ b/dcgm-exporter.yaml
@@ -18,23 +18,23 @@ metadata:
   name: "dcgm-exporter"
   labels:
     app.kubernetes.io/name: "dcgm-exporter"
-    app.kubernetes.io/version: "2.1.0-rc.2"
+    app.kubernetes.io/version: "2.1.0"
 spec:
   updateStrategy:
     type: RollingUpdate
   selector:
     matchLabels:
       app.kubernetes.io/name: "dcgm-exporter"
-      app.kubernetes.io/version: "2.1.0-rc.2"
+      app.kubernetes.io/version: "2.1.0"
   template:
     metadata:
       labels:
         app.kubernetes.io/name: "dcgm-exporter"
-        app.kubernetes.io/version: "2.1.0-rc.2"
+        app.kubernetes.io/version: "2.1.0"
       name: "dcgm-exporter"
     spec:
       containers:
-      - image: "nvidia/dcgm-exporter:2.0.10-2.1.0-rc.2-ubuntu18.04"
+      - image: "nvidia/dcgm-exporter:2.0.13-2.1.0-ubuntu18.04"
         env:
         - name: "DCGM_EXPORTER_LISTEN"
           value: ":9400"
@@ -64,11 +64,11 @@ metadata:
   name: "dcgm-exporter"
   labels:
     app.kubernetes.io/name: "dcgm-exporter"
-    app.kubernetes.io/version: "2.1.0-rc.2"
+    app.kubernetes.io/version: "2.1.0"
 spec:
   selector:
     app.kubernetes.io/name: "dcgm-exporter"
-    app.kubernetes.io/version: "2.1.0-rc.2"
+    app.kubernetes.io/version: "2.1.0"
   ports:
   - name: "metrics"
     port: 9400
