--- a/service-monitor.yaml
+++ b/service-monitor.yaml
@@ -18,12 +18,12 @@ metadata:
   name: "dcgm-exporter"
   labels:
     app.kubernetes.io/name: "dcgm-exporter"
-    app.kubernetes.io/version: "2.1.0-rc.2"
+    app.kubernetes.io/version: "2.1.0"
 spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: "dcgm-exporter"
-      app.kubernetes.io/version: "2.1.0-rc.2"
+      app.kubernetes.io/version: "2.1.0"
   endpoints:
   - port: "metrics"
     path: "/metrics"
