--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,10 +32,10 @@ commands:
             git config --global user.name "circleci-runai"
             git config --global user.email "circleci@run.ai"
             git clone https://github.com/run-ai/installkit-customer.git
-            cd installkit-customer/subcharts/gpu-metrics-exporter
+            cd installkit-customer/subcharts/dcgm-exporter
             sed -i "0,/^\([[:space:]]*tag: *\).*/s//\1$TAG/" values.yaml
             git add values.yaml
-            git commit -m "updated gpu-metrics-exporter production version to $TAG [skip ci]"
+            git commit -m "updated dcgm-exporter production version to $TAG [skip ci]"
             git push
 jobs:
   deploy-staging:
@@ -53,11 +53,8 @@ jobs:
           name: "Docker build and push"
           command: |
             TAG=latest
-            docker build -t gcr.io/run-ai-staging/dcgm-exporter:$TAG -f exporters/prometheus-dcgm/dcgm-exporter/Dockerfile .
+            docker build -t gcr.io/run-ai-staging/dcgm-exporter:$TAG -f docker/Dockerfile.ubuntu18.04 .
             docker push gcr.io/run-ai-staging/dcgm-exporter:$TAG
-
-            docker build -t gcr.io/run-ai-staging/pod-gpu-metrics-exporter:$TAG -f exporters/prometheus-dcgm/k8s/pod-gpu-metrics-exporter/Dockerfile .
-            docker push gcr.io/run-ai-staging/pod-gpu-metrics-exporter:$TAG
 
       - test_installkit
 
@@ -76,12 +73,9 @@ jobs:
           name: "Docker build and push"
           command: |
             TAG=${CIRCLE_TAG/v/''}
-            docker build -t gcr.io/run-ai-prod/dcgm-exporter:$TAG -f exporters/prometheus-dcgm/dcgm-exporter/Dockerfile .
+            docker build -t gcr.io/run-ai-prod/dcgm-exporter:$TAG -f docker/Dockerfile.ubuntu18.04 .
             docker push gcr.io/run-ai-prod/dcgm-exporter:$TAG
 
-            docker build -t gcr.io/run-ai-prod/pod-gpu-metrics-exporter:$TAG -f exporters/prometheus-dcgm/k8s/pod-gpu-metrics-exporter/Dockerfile .
-            docker push gcr.io/run-ai-prod/pod-gpu-metrics-exporter:$TAG
-            
       - update_version_in_installkit
 
 workflows:
