--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,11 @@ jobs:
           name: "Docker build and push"
           command: |
             TAG=latest
-            docker build -t gcr.io/run-ai-staging/dcgm-exporter:$TAG -f docker/Dockerfile.ubuntu18.04 .
+            docker build \
+            	--build-arg "GOLANG_VERSION=1.14.2" \
+            	--build-arg "DCGM_VERSION=2.0.13" \
+            	--tag "gcr.io/run-ai-staging/dcgm-exporter:$TAG" \
+            	--file docker/Dockerfile.ubuntu18.04 .
             docker push gcr.io/run-ai-staging/dcgm-exporter:$TAG
 
       - test_installkit
@@ -73,7 +77,11 @@ jobs:
           name: "Docker build and push"
           command: |
             TAG=${CIRCLE_TAG/v/''}
-            docker build -t gcr.io/run-ai-prod/dcgm-exporter:$TAG -f docker/Dockerfile.ubuntu18.04 .
+            docker build \
+            	--build-arg "GOLANG_VERSION=1.14.2" \
+            	--build-arg "DCGM_VERSION=2.0.13" \
+            	--tag "gcr.io/run-ai-prod/dcgm-exporter:$TAG" \
+            	--file docker/Dockerfile.ubuntu18.04 .
             docker push gcr.io/run-ai-prod/dcgm-exporter:$TAG
 
       - update_version_in_installkit
