--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ workflows:
           filters:
             branches:
               only:
-              - master
+              - base-image-fixes
               - ubi2
       - deploy-production:
           requires:
