Revert "Run deploy-staging for base-image-fixes"
This reverts commit 49dc2f0ecc8918578d0689efc80a1fab5fadb55f.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,7 @@ workflows:
           filters:
             branches:
               only:
-              - base-image-fixes
+              - master
               - ubi2
       - deploy-production:
           requires:
