--- a/deployment/dcgm-exporter/values.yaml
+++ b/deployment/dcgm-exporter/values.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 image:
-  repository: nvidia/dcgm-exporter
+  repository: nvcr.io/nvidia/k8s/dcgm-exporter
   pullPolicy: IfNotPresent
   # Image tag defaults to AppVersion, but you can use the tag key
   # for the image tag, e.g:
