--- a/deployment/dcgm-exporter/values.yaml
+++ b/deployment/dcgm-exporter/values.yaml
@@ -17,10 +17,12 @@ image:
   pullPolicy: IfNotPresent
   # Image tag defaults to AppVersion, but you can use the tag key
   # for the image tag, e.g:
-  tag: 2.1.4-2.3.0-ubuntu18.04
+  tag: 2.1.4-2.3.1-ubuntu18.04
 
 # Comment the following line to stop profiling metrics from DCGM
 arguments: ["-f", "/etc/dcgm-exporter/dcp-metrics-included.csv"]
+# Use "-r", "<HOST>:<PORT>" to connect to an already running hostengine
+# Example arguments: ["-r", "host123:5555"]
 
 imagePullSecrets: []
 nameOverride: ""
