add extra configmap volumes
Signed-off-by: sahare92 <sahare92@gmail.com>

--- a/deployment/dcgm-exporter/templates/daemonset.yaml
+++ b/deployment/dcgm-exporter/templates/daemonset.yaml
@@ -63,6 +63,9 @@ spec:
         hostPath:
           path: {{ .hostPath | quote }}
       {{- end }}
+      {{- with .Values.extraConfigMapVolumes }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
       containers:
       - name: exporter
         securityContext:
