--- a/deployment/dcgm-exporter/Chart.yaml
+++ b/deployment/dcgm-exporter/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 name: dcgm-exporter
 description: A Helm chart for DCGM exporter
-version: "2.4.0"
+version: "2.4.0-rc.2"
 kubeVersion: ">= 1.13.0-0"
-appVersion: "2.4.0"
+appVersion: "2.4.0-rc.2"
 sources:
 - https://gitlab.com/nvidia/container-toolkit/gpu-monitoring-tools
 home: https://github.com/nvidia/gpu-monitoring-tools/
