--- a/deployment/dcgm-exporter/values.yaml
+++ b/deployment/dcgm-exporter/values.yaml
@@ -56,6 +56,9 @@ securityContext:
      add: ["SYS_ADMIN"]
   # readOnlyRootFilesystem: true
 
+## Set pod priorityClassName
+# priorityClassName: ""
+
 service:
   type: ClusterIP
   port: 9400
